--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
-MONGODB_URI = 'mongodb+srv://kumar:rC-u53MgMMvsG*U@cluster0.evftjnd.mongodb.net/'
+MONGODB_URI = 'mongodb+srv://kumar:rC-u53MgMMvsG*U@cluster0.evftjnd.mongodb.net/';
+CLERK_WEBHOOK_SECRET = 'whsec_1QbaqmInyX9dml2NE3yzn4w0LP1I7EL4';
